# poly2tri-c

./: Makefile.am  ProjectHome.md  configure.ac
p2t/common/: shapes.c  utils.c  utils.h
p2t/sweep/: advancing_front.c  cdt.c  cdt.h  sweep.c  sweep.h  sweep_context.c  sweep_context.h
poly2tri-c/: Makefile.am
poly2tri-c/p2t/common/: shapes.c  utils.c
poly2tri-c/p2t/sweep/: sweep.c  sweep_context.c
poly2tri-c/refine/: Makefile.am  cdt-flipfix.c  cdt-flipfix.h  cdt.c  cdt.h  cluster.c  delaunay-terminator.c  delaunay-terminator.h  edge.c  mesh-action.h  mesh.c  mesh.h  pslg.h  rcdt.c  rcdt.h  refine.h  refiner.c  refiner.h  rutils.c  rutils.h  triangle.c  utils.h  vedge.c  vedge.h  visibility.c  vtriangle.c  vtriangle.h
poly2tri-c/render/: mesh-render.c  mesh-render.h  svg-plot.c  svg-plot.h
refine/: Makefile.am  bounded-line.c  bounded-line.h  cdt.c  cdt.h  circle.c  circle.h  cluster.c  delaunay-terminator.c  delaunay-terminator.h  edge.c  edge.h  line.c  line.h  mesh.c  mesh.h  point.c  point.h  refine.h  rmath.c  rmath.h  triangle.c  triangle.h  triangulation.h  vector2.c  vector2.h  visibility.c
render/: mesh-render.c  mesh-render.h  svg-plot.c  svg-plot.h
