noinst_LTLIBRARIES = libp2tc-refine.la

libp2tc_refine_la_SOURCES = bounded-line.c bounded-line.h cdt.c cdt.h circle.c circle.h cluster.c cluster.h delaunay-terminator.c delaunay-terminator.h edge.c edge.h line.c line.h rmath.c rmath.h mesh.c mesh.h point.c point.h pslg.c pslg.h refine.h triangle.c triangle.h triangulation.h utils.c utils.h vector2.c vector2.h visibility.c visibility.h

P2TC_REFINE_publicdir = $(P2TC_publicdir)/refine
P2TC_REFINE_public_HEADERS = bounded-line.h cdt.h circle.h cluster.h delaunay-terminator.h edge.h line.h mesh.h point.h pslg.h refine.h rmath.h triangle.h triangulation.h utils.h vector2.h visibility.h
